--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,8 +1,10 @@
 <div id="user_list">
+<div id="users">
 <% @list.each do |l| %>
   <div id="<%= l.id %>" class="user">
 	<div class="name"><%= l.name %> <span class="location"><%= l.location %></span></div>
 	<div class="story hidden"><%= l.story %></div>
   </div>
 <% end %>
+</div>
 </div>
