--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
 <title>Norovirus</title>
 <link href="/stylesheets/style.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="/stylesheets/jscrollpane.css" media="screen" rel="stylesheet" type="text/css" />
 <%= csrf_meta_tags %>
 <script src="/javascripts/jquery.js" type="text/javascript"></script>
 <script src="/javascripts/jquery_ujs.js" type="text/javascript"></script>
