--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Norovirus</title>
+<title>N O R O V I R U S  :  O N E  ::  Y O U  :  Z E R O</title>
 <link href="/stylesheets/style.css" media="screen" rel="stylesheet" type="text/css" />
 <link href="/stylesheets/jscrollpane.css" media="screen" rel="stylesheet" type="text/css" />
 <%= csrf_meta_tags %>
