--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
 	  <h2><%= @count %></h2>	
 	</div>
     <%= render :partial => "users/list" %>
-    <div id="info"><a href="" target="_blank">DO I HAVE NOROVIRUS?</a></div>
+    <div id="info"><a href="http://www.medicinenet.com/norovirus_infection/article.htm" target="_blank">DO I HAVE NOROVIRUS?</a></div>
   </div>
 </div>
 <div id="you">
