--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,19 +2,19 @@
 <html>
 <head>
 <title>N O R O V I R U S  :  O N E  ::  Y O U  :  Z E R O</title>
-<link href="<%= root_path %>/stylesheets/style.css" media="screen" rel="stylesheet" type="text/css" />
-<link href="<%= root_path %>/stylesheets/jscrollpane.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="<%= root_path %>stylesheets/style.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="<%= root_path %>stylesheets/jscrollpane.css" media="screen" rel="stylesheet" type="text/css" />
 <%= csrf_meta_tags %>
-<script src="<%= root_path %>/javascripts/jquery.js" type="text/javascript"></script>
-<script src="<%= root_path %>/javascripts/jquery_ujs.js" type="text/javascript"></script>
+<script src="<%= root_path %>javascripts/jquery.js" type="text/javascript"></script>
+<script src="<%= root_path %>javascripts/jquery_ujs.js" type="text/javascript"></script>
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 </head>
 <body>
 <%= yield %>
-<script src="<%= root_path %>/javascripts/jquery.jscrollpane.min.js" type="text/javascript"></script>
-<script src="<%= root_path %>/javascripts/jquery.mousewheel.js" type="text/javascript"></script>
-<script src="<%= root_path %>/javascripts/norovirus.js" type="text/javascript"></script>
+<script src="<%= root_path %>javascripts/jquery.jscrollpane.min.js" type="text/javascript"></script>
+<script src="<%= root_path %>javascripts/jquery.mousewheel.js" type="text/javascript"></script>
+<script src="<%= root_path %>javascripts/norovirus.js" type="text/javascript"></script>
 </body>
 </html>
