--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -133,6 +133,7 @@ h2 {
   min-width: 900px;
   width: 62%;
   height: 100%;
+  min-height: 800px;
   float: left;
   color: #eadb1b;
   overflow: hidden;
@@ -141,6 +142,7 @@ h2 {
   left: -40px;
   position: absolute;
   width: 100%;
+  min-height: 800px;
   height: 100%;
   min-height: 800px;
   background: #000;
@@ -156,6 +158,7 @@ h2 {
 #virus_container {
   position: relative;
   height: 100%;
+  min-height: 800px;
   z-index: 5;
   overflow: hidden;
 }
@@ -170,6 +173,7 @@ h2 {
 #user_list {
   float: left;
   height: 100%;
+  min-height: 800px;
   width: 200px;
   /* font-family: Helvetica, Arial, sans-serif; */
   outline: none;
