changed font sizes

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <div id="user_input">
   <div class="welcome">
-	Did you recently have a 24-hour vomit fest? From both ends? Fever? Dehydration? Congratulations, sounds like you had a norovirus! Add your name to the proud, recovered and temporarily-humbled victims list.
+	Did you recently have a 24-hour vomit fest? From both ends? Fever? Dehydration? Congratulations, sounds like you had a <a href="http://www.medicinenet.com/norovirus_infection/article.htm" target="_blank">NOROVIRUS</a>! Add your name to the proud, recovered and temporarily-humbled victims list.
   </div>
 <nav>
 <%= form_for(:user, :url => {:action => 'create'}) do |f| %>
