--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -214,26 +214,25 @@ h2 {
   color: #eadb1b;
   font-size: 130%;
 }
-#info a:link, a:visited { 
-  padding: 10px;
-  background: black;
-  color: #eadb1b;
-  text-decoration: none;
-  border: 1px solid black;
+a:link, a:visited {
+  text-decoration: underline;
+  padding: 2px 0;
+  color: black;
 }
-#info:hover a { 
-  background: #eadb1b; 
-  color: black; 
-  text-decoration: underline; 
+a:hover { 
+  background: black; 
+  color: #eadb1b;
+  text-decoration:none;
 }
 
 /*  Right Side  */
 
 #you {
   position: relative;
-  background: transparent;
+  background: transparent url(/images/noro2.png) right 30px no-repeat;
   height: 100%;
   min-height: 800px;
+  min-width: 300px;
   float: left;
   color: #000;
 }
@@ -254,6 +253,9 @@ h2 {
   position: absolute;
   bottom: 15px;
   clear: both;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 100%;
+  z-index: 10;
 }
 nav ul li {
   margin-bottom: 5px;
@@ -270,10 +272,11 @@ input[type="text"],textarea {
   outline: none;
   padding: 5px;
   width: 250px;
-  font-family: "MenschRegular", Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
 }
 textarea { height: 4.5em; }
 input[type="submit"] {
+  font-size:130%;
   padding: 10px 15px;
   border: 1px solid #eadb1b;
   margin-top: 5px;
@@ -287,8 +290,4 @@ input[type="submit"]:hover {
   background: #eadb1b;
   color: black;
   border: 1px solid black;
-}
-#user_input {
-  z-index: 10;
-  font-size: 130%;
 }
