--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,10 @@
 <link href="<%= root_path %>stylesheets/style.css" media="screen" rel="stylesheet" type="text/css" />
 <link href="<%= root_path %>stylesheets/jscrollpane.css" media="screen" rel="stylesheet" type="text/css" />
 <%= csrf_meta_tags %>
+<meta property="og:image" content="http://norovirusoneyouzero.com/images/facebook.png"/>
+<meta property="og:title" content="Norovirus took me down!"/>
+<meta property="og:description" content="I barfed for 24 hrs and I’m letting the world know it, dammit."/>
+<meta property="og:url" content="http://norovirusoneyouzero.com"/>
 <script src="<%= root_path %>javascripts/jquery.js" type="text/javascript"></script>
 <script src="<%= root_path %>javascripts/jquery_ujs.js" type="text/javascript"></script>
 <!--[if lt IE 9]>
