--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,13 +4,10 @@
   </div>
 <nav>
 <%= form_for(:user, :url => {:action => 'create'}) do |f| %>
-  <ul>	
-    <li><%= f.label(:name, "Name ( First, Last Initial )") %> </li>
-    <li><%= f.text_field(:name, :class => "user_name") %> </li>
-	<li><%= f.label(:location, "Location ( City, State )") %> </li>
-	<li><%= f.text_field(:location, :class => "user_location") %> </li>
-	<li><label for="user_story">Share your story</br>( it's okay to leave stuff out )</label> </li>
-    <li><%= f.text_area(:story, :class => "user_story") %> </li>
+  <ul>
+    <li><%= f.text_field(:name, :class => "user_name", :value => "Name ( First, Last Initial )") %> </li>
+	<li><%= f.text_field(:location, :class => "user_location", :value => "Location ( City, State )") %> </li>
+    <li><%= f.text_area(:story, :class => "user_story", :value => "Share your story\n( it's okay to leave stuff out )") %> </li>
     <li><%= submit_tag("submit")%> 
 	
 		<div class="share">	<a href="https://twitter.com/share" class="twitter-share-button" data-text="Norovirus took me down! I barfed for 24 hrs and I'm letting the world know it, dammit." data-count="none" data-url="http://norovirusoneyouzero.com">Tweet</a>
