--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 <meta property="og:image" content="http://norovirusoneyouzero.com/images/facebook.png"/>
 <meta property="og:title" content="Norovirus took me down!"/>
 <meta property="og:description" content='Join the "I just barfed for 24 hrs" victims list.'/>
-<meta property="og:url" content="http://norovirusoneyouzero.com"/>
+<meta property="og:url" content="http://NorovirusOneYouZero.com"/>
 <script src="<%= root_path %>javascripts/jquery.js" type="text/javascript"></script>
 <script src="<%= root_path %>javascripts/jquery_ujs.js" type="text/javascript"></script>
 <!--[if lt IE 9]>
