changed twitter text

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,7 +10,7 @@
     <li><%= f.text_area(:story, :class => "user_story", :value => "Share your story\n( it's okay to leave stuff out )") %> </li>
     <li><%= submit_tag("submit")%> 
 	
-		<div class="share">	<a href="https://twitter.com/share" class="twitter-share-button" data-text='Join the "I just barfed for 24 hrs" victims list.' data-count="none" data-url="http://norovirusoneyouzero.com">Tweet</a>
+		<div class="share">	<a href="https://twitter.com/share" class="twitter-share-button" data-text='Join the "I just barfed for 24 hrs" victims list.' data-count="none" data-url="http://NorovirusOneYouZero.com">Tweet</a>
 		<script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
 		</div>
 		
