--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -3,7 +3,9 @@
 <% @list.each do |l| %>
   <div id="<%= l.id %>" class="user">
 	<div class="name"><%= l.name %> <span class="location"><%= l.location %></span></div>
+	<% if l.story != "" %>
 	<div class="story hidden"><%= l.story %></div>
+  	<% end %>
   </div>
 <% end %>
 </div>
