--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,12 +1,14 @@
 <div id="user_list">
 <div id="users">
 <% @list.each do |l| %>
+  <% if l.name != "" %>
   <div id="<%= l.id %>" class="user">
-	<div class="name"><%= l.name %> <span class="location"><%= l.location %></span></div>
+	<div class="name"><%= l.name %> <% if l.location != "" %> <span class="location"><%= l.location %></span><% end %></div>
 	<% if l.story != "" %>
 	<div class="story hidden"><%= l.story %></div>
   	<% end %>
   </div>
+  <% end %>
 <% end %>
 </div>
 </div>
