--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
 <title>N O R O V I R U S  :  O N E  ::  Y O U  :  Z E R O</title>
 <link href="<%= root_path %>stylesheets/style.css" media="screen" rel="stylesheet" type="text/css" />
 <link href="<%= root_path %>stylesheets/jscrollpane.css" media="screen" rel="stylesheet" type="text/css" />
+<link ref="shortcut icon" href="/favicon.ico">
 <%= csrf_meta_tags %>
 <meta property="og:image" content="http://norovirusoneyouzero.com/images/facebook.png"/>
 <meta property="og:title" content="Norovirus took me down!"/>
