--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,6 +18,7 @@
 		<script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" type="text/javascript"></script>
 		</div>
 	</li>
+	<li class="mck"><a href="http://mckinney.com" class="tenperc" target="_blank">a product of McKINNEY TEN PERCENT</a></li>
   </ul>
 <% end %>
 </nav>
