--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -174,7 +174,7 @@ h2 {
 }
 #virus_header {
   position: absolute;
-  margin: 80px 40px 0 0;
+  margin: 70px 40px 0 0;
   right:0;
   text-align: center;
 }
@@ -234,6 +234,8 @@ a:hover {
   color: #eadb1b;
   text-decoration:none;
 }
+a.tenperc { padding: 2px 4px; }
+.mck { margin-top: 10px; }
 
 /*  Right Side  */
 
@@ -253,7 +255,7 @@ a:hover {
   overflow: hidden;
 }
 #you_header {
-  margin: 80px 0 0 0;
+  margin: 70px 0 0 0;
   float: left;
 }
 #you_header h1, #you_header h2 {
